# numsim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  ToDo.md  build.sh  job.sh  output_0000.txt  precice-config.xml  prepare_submission.sh  run-format.sh  run-tidy.sh  run_pipeline.sh  run_simulation.sh  run_tidy.sh  setup.cfg  submission_test.sh
adapter/: CMakeLists.txt
adapter/src/: CMakeLists.txt  main.cpp
adapterdummy/: solverdummy.cpp
calculix/: geometry.py  main.py  simulation.py  writer.py
cfg/calculix/: 2d_elastic_tube.yaml
cfg/fluid/: 2d_elastic_tube.txt  channel_flow.txt  lid_driven_cavity.txt
cfg/ml/: config.json  overfitting_as_hard_as_i_can.json  ref_config.json  train.txt
cfg/precice/: 2d_elastic_tube.xml  3d_elastic_tube.xml  dummy_config.xml
cfg/scenarios/: boundaries.txt
fluid_ml/: constants.py  dataloader.py  evaluate.py  generate_submission.py  main.py  model.py  mymodel.py  normalization.py  prediction_plot.py  scratch.py  submit.py  train.py  visualize.py
ml/: dataloader.py  main.py  model.py  mymodel.py  scratch.py
openfoam/: case.py  convert.py  generate.py  lid_driven_cavity.txt  main.py
resources/: 41_cells_inputs.npy  flow_speed_0.25_inputs.npy  results.ipynb
resources/openfoam/: PDRblockMeshDict  U  U.txt  blockMesh.txt  blockMeshDict  controlDict  controlDict.txt  controlDictPrecice  decomposeParDict  decomposeParDict.txt  dynamicBoundary  dynamicMeshDict  dynamicMeshDict.txt  fvSchemes  fvSchemes.txt  fvSolution  fvSolution.txt  fvSolutionPrecice  header.txt  p  p.txt  pointDisplacement  pointDisplacement.txt  preciceDict  preciceDict.txt  pulsatile_inlet.txt  tableBoundary  transportProperties  transportProperties.txt  turbulenceProperties
resources/true_np_arrays/: 10x10_cells_inputs.npy  10x10_cells_labels.npy  25x25_cells_inputs.npy  25x25_cells_labels.npy  30x30_cells_inputs.npy  30x30_cells_labels.npy  41x41_cells_labels.npy  flow_speed_0.25_labels.npy  flow_speed_3.0_inputs.npy  flow_speed_3.0_labels.npy
scenarios/: lid_driven_cavity.txt  parallel2.txt
solver/: CMakeLists.txt
solver/src/: CMakeLists.txt  macros.h  main.cpp  settings.cpp  settings.h
solver/src/grid/: array2d.cpp  array2d.h  dataField.cpp  dataField.h  staggeredGrid.cpp  staggeredGrid.h
solver/src/outputWriter/: outputWriter.cpp  outputWriterParaview.cpp  outputWriterParaview.h  outputWriterParaviewParallel.cpp  outputWriterParaviewParallel.h  outputWriterText.cpp  outputWriterText.h  outputWriterTextParallel.cpp
solver/src/simulation/: discreteOperators.cpp  discreteOperators.h  partitioning.cpp  partitioning.h  simulation.cpp  simulation.h
solver/src/simulation/pressureSolver/: conjugateGradientSolver.cpp  conjugateGradientSolver.h  pressureSolver.cpp  pressureSolver.h  redBlackSolver.cpp  redBlackSolver.h
src/: CMakeLists.txt  grid.cpp  grid.h  macros.h  main.cpp  outputWriter.cpp  outputWriter.h  settings.cpp  settings.h  solver.cpp  solver.h
src/grid/: array2d.cpp  array2d.h  dataCell.cpp  dataCell.h  dataField.cpp  dataField.h  discretization.cpp  discretization.h  staggeredGrid.cpp  staggeredGrid.h
src/outputWriter/: outputWriter.cpp  outputWriter.h  outputWriterParaview.cpp  outputWriterParaview.h  outputWriterParaviewParallel.cpp  outputWriterParaviewParallel.h  outputWriterText.cpp  outputWriterText.h  outputWriterTextParallel.cpp  outputWriterTextParallel.h  refwriter.cpp
src/output_writer/: write_paraview_output.cpp  write_paraview_output.h
src/simulation/: discreteOperators.cpp  discreteOperators.h  parallelSimulation.cpp  parallelSimulation.h  partitioning.cpp  partitioning.h  pressureSolver.cpp  pressureSolver.h  simulation.cpp  simulation.h  velocitySolver.cpp  velocitySolver.h
src/simulation/pressure/: PressureSolver.cpp  PressureSolver.h  gaussSeidel.cpp  gaussSeidel.h  pressureSolver.cpp  solver.cpp  solver.h  sor.cpp  sor.h
src/simulation/pressureSolver/: conjugateGradient.cpp  conjugateGradient.h  conjugateGradientSolver.cpp  conjugateGradientSolver.h  pressureSolver.cpp  pressureSolver.h  pressureSolverSerial.cpp  pressureSolverSerial.h  redBlack.cpp  redBlack.h  redBlackSolver.cpp  redBlackSolver.h
src/simulation/velocity/: centralDifferences.cpp  centralDifferences.h  donorCell.cpp  donorCell.h  velocitySolver.cpp  velocitySolver.h
src/solver/: centralDifferences.cpp  centralDifferences.h  donorCell.cpp  donorCell.h  gaussSeidel.cpp  gaussSeidel.h  solver.cpp  solver.h  sor.cpp  sor.h
